--- a/cesi-zen-ionic/src/app/app.component.html
+++ b/cesi-zen-ionic/src/app/app.component.html
@@ -2,9 +2,9 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi&#64;ionicframework.com</ion-note>
+        <ion-list id="menu-list">
+          <ion-list-header>CESI Zen</ion-list-header>
+          <ion-note>Bienvenue sur votre espace bien-être</ion-note>
 
           @for (p of appPages; track p; let i = $index) {
             <ion-menu-toggle auto-hide="false">
